--- a/src/styles/components/projects/DefaultProjects.module.scss
+++ b/src/styles/components/projects/DefaultProjects.module.scss
@@ -7,6 +7,15 @@
     margin-left: 0;
   }
 
+  &__notice {
+    font-family: $main-font;
+    font-size: #{fluid(16px, 18px)};
+    color: $black;
+    margin-left: #{fluid(0px, 300px)};
+    font-weight: 400;
+    margin-bottom: #{fluid(40px, 90px)};
+  }
+
   &__row {
     display: flex;
     flex-direction: row;
@@ -30,12 +39,12 @@
     color: $blue;
     margin-left: #{fluid(0px, 300px)};
     font-weight: 400;
-    margin-bottom: #{fluid(40px, 90px)};
 
     @include mobile {
       @include edge-padding;
       height: calc(100% + 15px);
       margin-left: 0;
+      margin-bottom: #{fluid(40px, 90px)};
     }
   }
 }
